tests/compile-fail/02-uninitialized-let.stderr
error: only simple idents or tuple patterns are supported in let bindings
 --> tests/compile-fail/02-uninitialized-let.rs:6:5
  |
6 |     let x: graph::TracedValue<i32>;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
